# korg_prophecy_emu

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build.sh  deploy.py  gemini_report.md  implementation_roadmap.md  package.json
docs/: DESIGN.md
include/: BiquadFilter.h  DSPUtils.h
src/: AudioEngine.cpp  AudioEngine.h  FormantBank.h  ProphecyDSP.cpp  ProphecyDSP.h  Voice.cpp  Voice.h  main.cpp
tests/: CMakeLists.txt  test_dsp.cpp
web/: index.html
web/css/: style.css
web/js/: midi.js
